# bot

./: Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: test.yml
bot/: __init__.py  __main__.py
