[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "doxmx-bot"
authors = [{name = "Tony G", email = "tonysk8@gmx.net"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.9"

[metadata]
[project.urls]
Home = "https://doxmx.github.io/bot/"
